<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:drawableStart="@drawable/baseline_star_border_24"
        android:text="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo"
        android:background="@color/orange"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/rating"
        android:fontFamily="sans-serif-black"
        tools:text="@sample/hotel.json/data/name"
        />

    <TextView
        android:id="@+id/adress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:text="@sample/hotel.json/data/adress"
        />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/adress"
        app:layout_constraintStart_toStartOf="@id/adress"
        tools:text="@sample/hotel.json/data/minimal_price"
        />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_text"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/price"
        app:layout_constraintTop_toTopOf="@id/price"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="priceText,price"
        />

    <TextView
        android:id="@+id/hotelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotel_text"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        app:layout_constraintStart_toStartOf="@id/price"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/hotelText"
        app:layout_constraintTop_toBottomOf="@id/hotelText"
        tools:text="@sample/hotel.json/data/about_the_hotel/description"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fbutt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/description"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:drawableStart="@drawable/baseline_deck_24"
        android:background="@color/white"
        android:text="@string/fbutt"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sbutt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/description"
        app:layout_constraintTop_toBottomOf="@id/fbutt"
        android:drawableStart="@drawable/baseline_check_box_24"
        android:text="@string/sbutt"
        android:background="@color/white"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tbutt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/description"
        app:layout_constraintTop_toBottomOf="@id/sbutt"
        android:drawableStart="@drawable/baseline_check_box_outline_blank_24"
        android:background="@color/white"
        android:text="@string/tbutt"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/room"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>